--- a/mypage.html
+++ b/mypage.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My Blog</title>
 </head>
 <body>
-    
+    <h1>My first post</h1>
+    <h3>DNA: the language of life</h3>
+    <section>
+        <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nam excepturi asperiores velit explicabo sequi reiciendis ex, ratione doloribus iure. Rerum, quis? Voluptatum, dolorum. Necessitatibus vitae similique ducimus distinctio fugit. Dolorum.</p>
+        <figure>
+            <img src="./assets/img/dnacode.jpg" alt="">
+        </figure>
+        <figcaption>Código de la vida</figcaption>
+    </section>
 </body>
 </html>
