--- a/mypage.html
+++ b/mypage.html
@@ -7,14 +7,32 @@
     <title>My Blog</title>
 </head>
 <body>
-    <h1>My first post</h1>
-    <h3>DNA: the language of life</h3>
+    <nav> 
+        <a href="https://www.nature.com/scitable/topicpage/discovery-of-dna-structure-and-function-watson-397/">Discovery</a> |
+    </nav>    
+    <nav> 
+        <a href="https://www.yourgenome.org/stories/the-discovery-of-dna">Historia del DNA</a> |
+    </nav>
     <section>
+        <h1>Mi primer post</h1>
+        <h3>DNA: el lenguaje de la vida</h3>
         <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nam excepturi asperiores velit explicabo sequi reiciendis ex, ratione doloribus iure. Rerum, quis? Voluptatum, dolorum. Necessitatibus vitae similique ducimus distinctio fugit. Dolorum.</p>
         <figure>
             <img src="./assets/img/dnacode.jpg" alt="">
         </figure>
-        <figcaption>Código de la vida</figcaption>
+        <figcaption>Figura 1. Código de la vida</figcaption>
     </section>
+
+    <section>
+        <h1>Second post</h1>
+        <h3>Proteins</h3>
+        <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nam excepturi asperiores velit explicabo sequi reiciendis ex, ratione doloribus iure. Rerum, quis? Voluptatum, dolorum. Necessitatibus vitae similique ducimus distinctio fugit. Dolorum.</p>
+        <figure>
+            <img src="./assets/img/protein.jpeg" alt="">
+        </figure>
+        <figcaption>Figura 2. PDB</figcaption>
+    </section>
+
+    <p>Open from <time>10:00</time> to <time>21:00</time> every weekday.</p>
 </body>
 </html>
