--- a/mypage.html
+++ b/mypage.html
@@ -8,12 +8,12 @@
 </head>
 <body>
     <nav> 
-        <a href="https://www.nature.com/scitable/topicpage/discovery-of-dna-structure-and-function-watson-397/">Discovery</a> |
+        <a href="#primer-post">Discovery</a> |
     </nav>    
     <nav> 
-        <a href="https://www.yourgenome.org/stories/the-discovery-of-dna">Historia del DNA</a> |
+        <a href="#second-post">Historia del DNA</a> |
     </nav>
-    <section>
+    <section id="primer-post"> 
         <h1>Mi primer post</h1>
         <h3>DNA: el lenguaje de la vida</h3>
         <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nam excepturi asperiores velit explicabo sequi reiciendis ex, ratione doloribus iure. Rerum, quis? Voluptatum, dolorum. Necessitatibus vitae similique ducimus distinctio fugit. Dolorum.</p>
@@ -23,7 +23,7 @@
         <figcaption>Figura 1. Código de la vida</figcaption>
     </section>
 
-    <section>
+    <section id="second-post">
         <h1>Second post</h1>
         <h3>Proteins</h3>
         <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nam excepturi asperiores velit explicabo sequi reiciendis ex, ratione doloribus iure. Rerum, quis? Voluptatum, dolorum. Necessitatibus vitae similique ducimus distinctio fugit. Dolorum.</p>
