--- a/mypage.html
+++ b/mypage.html
@@ -8,10 +8,14 @@
 </head>
 <body>
     <nav> 
-        <a href="#primer-post">Discovery</a> |
-    </nav>    
-    <nav> 
-        <a href="#second-post">Historia del DNA</a> |
+        <ul>
+            <li>
+            <a href="#primer-post">Discovery</a> |
+            </li>
+            <li>
+            <a href="data.html">Historia del DNA</a> |
+            </li>
+        </ul>
     </nav>
     <section id="primer-post"> 
         <h1>Mi primer post</h1>
