--- a/data.html
+++ b/data.html
@@ -4,9 +4,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My Blog</title>
+    <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
-    <h1>Mi primer post</h1>
+    <nav class="nav" class="nav"> 
+        <div>
+     
+            <ul class="Fonttitle" id="nav-options">
+                <li>
+                    <a href="#primer-post">DNA</a>
+                </li>
+                <li>
+                    <a href="data.html">Proteínas</a>
+                </li>
+        
+            </ul>           
+        </div>
+    </nav>
+    <section class= "section" id="second-post">
+        <h1  class="h1">Proteínas</h1>
+        <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nam excepturi asperiores velit explicabo sequi reiciendis ex, ratione doloribus iure. Rerum, quis? Voluptatum, dolorum. Necessitatibus vitae similique ducimus distinctio fugit. Dolorum.</p>
+        <figure>
+            <img src="./assets/img/protein.jpeg" alt="">
+        </figure>
+        <figcaption>Figura 1. PDB</figcaption>
+    </section>
+
+    <section class= "body" id="tercer-post">
+        <h1>Cristalografía</h1>
+        <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nam excepturi asperiores velit explicabo sequi reiciendis ex, ratione doloribus iure. Rerum, quis? Voluptatum, dolorum. Necessitatibus vitae similique ducimus distinctio fugit. Dolorum.</p>
+        <figure>
+            <img src="./assets/img/prot.png" alt="">
+        </figure>
+        <figcaption>Figura 2. Cristalografía</figcaption>
+    </section>
+
 </body>
 </html>
