--- a/mypage.html
+++ b/mypage.html
@@ -8,19 +8,22 @@
     <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
-    <nav> 
-        <ul>
-            <li>
-            <a href="#primer-post">Discovery</a> |
-            </li>
-            <li>
-            <a href="data.html">Historia del DNA</a> |
-            </li>
-        </ul>
+    <nav class="nav" class="nav"> 
+        <div>
+     
+            <ul class="Fonttitle" id="nav-options">
+                <li>
+                    <a href="#primer-post">DNA</a>
+                </li>
+                <li>
+                    <a href="data.html">Proteínas</a>
+                </li>
+        
+            </ul>           
+        </div>
     </nav>
-    <section id="primer-post"> 
-        <h1>Mi primer post</h1>
-        <h3>DNA: el lenguaje de la vida</h3>
+    <section class= "section" id="primer-post"> 
+        <h1  class="h1">DNA: el lenguaje de la vida</h1>
         <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nam excepturi asperiores velit explicabo sequi reiciendis ex, ratione doloribus iure. Rerum, quis? Voluptatum, dolorum. Necessitatibus vitae similique ducimus distinctio fugit. Dolorum.</p>
         <figure>
             <img src="./assets/img/dnacode.jpg" alt="">
@@ -28,16 +31,15 @@
         <figcaption>Figura 1. Código de la vida</figcaption>
     </section>
 
-    <section id="second-post">
-        <h1>Second post</h1>
-        <h3>Proteins</h3>
+    <section class= "body" id="second-post">
+        <h1>Historia del DNA</h1>
         <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nam excepturi asperiores velit explicabo sequi reiciendis ex, ratione doloribus iure. Rerum, quis? Voluptatum, dolorum. Necessitatibus vitae similique ducimus distinctio fugit. Dolorum.</p>
         <figure>
-            <img src="./assets/img/protein.jpeg" alt="">
+            <img src="./assets/img/dnahistory.png" alt="">
         </figure>
-        <figcaption>Figura 2. PDB</figcaption>
+        <figcaption>Figura 2. DNA history</figcaption>
     </section>
 
-    <p>Open from <time>10:00</time> to <time>21:00</time> every weekday.</p>
+ 
 </body>
 </html>
